Agregado hover iconos

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             alt="Logo Ferrari"
             width="40"
             height="40"
+            class="imageDarken"
           />
         </a>
         <button
@@ -309,19 +310,19 @@
           <div>
             <a href="#"
               ><i
-                class="bi bi-facebook px-3 iconoSocialNetwork tamañoIcono textoAmarillo"
+                class="bi bi-facebook px-3 tamañoIcono imageDarken textoAmarillo"
               ></i
             ></a>
             <!-- Aquí faltan las direcciones de la página en las redes sociales -->
             <a href="#"
               ><i
-                class="bi bi-twitter px-3 iconoSocialNetwork tamañoIcono textoAmarillo"
+                class="bi bi-twitter px-3 imageDarken tamañoIcono textoAmarillo"
               ></i
             ></a>
             <!-- Aquí faltan las direcciones de la página en las redes sociales -->
             <a href="#"
               ><i
-                class="bi bi-instagram px-3 iconoSocialNetwork tamañoIcono textoAmarillo"
+                class="bi bi-instagram px-3 imageDarken tamañoIcono textoAmarillo"
               ></i
             ></a>
             <!-- Aquí faltan las direcciones de la página en las redes sociales -->
