--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,6 +48,7 @@
             alt="Logo Ferrari"
             width="40"
             height="40"
+            class="imageDarken"
           />
         </a>
         <button
@@ -147,19 +148,19 @@
         <div>
           <a href="#"
             ><i
-              class="bi bi-facebook px-3 tamañoIcono textoAmarillo"
+              class="bi bi-facebook px-3 tamañoIcono imageDarken textoAmarillo"
             ></i
           ></a>
           <!-- Aquí faltan las direcciones de la página en las redes sociales -->
           <a href="#"
             ><i
-              class="bi bi-twitter px-3 tamañoIcono textoAmarillo"
+              class="bi bi-twitter px-3 tamañoIcono imageDarken textoAmarillo"
             ></i
           ></a>
           <!-- Aquí faltan las direcciones de la página en las redes sociales -->
           <a href="#"
             ><i
-              class="bi bi-instagram px-3 tamañoIcono textoAmarillo"
+              class="bi bi-instagram px-3 tamañoIcono imageDarken textoAmarillo"
             ></i
           ></a>
           <!-- Aquí faltan las direcciones de la página en las redes sociales -->
