--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -40,6 +40,7 @@
             alt="Logo Ferrari"
             width="40"
             height="40"
+            class="imageDarken"
           />
         </a>
         <button
@@ -165,15 +166,15 @@
         <p class="m-0">Buscanos en las redes</p>
         <div>
           <a href="#"
-            ><i class="bi bi-facebook px-3 tamañoIcono textoAmarillo"></i
+            ><i class="bi bi-facebook px-3 tamañoIcono imageDarken textoAmarillo"></i
           ></a>
           <!-- Aquí faltan las direcciones de la página en las redes sociales -->
           <a href="#"
-            ><i class="bi bi-twitter px-3 tamañoIcono textoAmarillo"></i
+            ><i class="bi bi-twitter px-3 tamañoIcono imageDarken textoAmarillo"></i
           ></a>
           <!-- Aquí faltan las direcciones de la página en las redes sociales -->
           <a href="#"
-            ><i class="bi bi-instagram px-3 tamañoIcono textoAmarillo"></i
+            ><i class="bi bi-instagram px-3 tamañoIcono imageDarken textoAmarillo"></i
           ></a>
           <!-- Aquí faltan las direcciones de la página en las redes sociales -->
         </div>
