--- a/pages/modelos.html
+++ b/pages/modelos.html
@@ -116,35 +116,35 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../images/purosangue1.png" class="d-block w-100" alt="Purosangue">
+                    <img src="../images/purosangue1.png" class="d-block w-90 mx-auto" alt="Purosangue">
                     <div class="carousel-caption d-none d-md-block text-light">
                       <h5>Ferrari Purosangue</h5>
                       <p>El Ferrari Purosangue es el primer coche en la historia de Ferari con cuatro puertas y cuatro plazas.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/812gts1.png" class="d-block w-100" alt="812GTS">
+                    <img src="../images/812gts1.png" class="d-block w-90 mx-auto" alt="812GTS">
                     <div class="carousel-caption d-none d-md-block text-light">
                       <h5>Ferrari 812GTS</h5>
                       <p>Sus 800 cv lo convierten en el descapotable de producción en serie con más potencia del mercado.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/296GTB1.png" class="d-block w-100" alt="296GTB">
+                    <img src="../images/296GTB1.png" class="d-block w-90 mx-auto" alt="296GTB">
                     <div class="carousel-caption d-none d-md-block text-light">
                       <h5>Ferrari 296GTB</h5>
                       <p>Un superdeportivo híbrido eléctrico enchufable.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/sf90stradale1.png" class="d-block w-100" alt="SF90 Stradale">
+                    <img src="../images/sf90stradale1.png" class="d-block w-90 mx-auto" alt="SF90 Stradale">
                     <div class="carousel-caption d-none d-md-block text-light mt-3">
                       <h5>SF90 Stradale</h5>
                       <p>Ferrari SF90 Stradale, el primer automóvil híbrido de producción en serie PHEV (vehículo eléctrico híbrido enchufable)con motor V8 turbo y 1000 CV de potencia máxima.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="../images/F8tributo1.png" class="d-block w-100" alt="296GTB">
+                    <img src="../images/F8tributo1.png" class="d-block w-90 mx-auto" alt="296GTB">
                     <div class="carousel-caption d-none d-md-block text-light">
                       <h5>Ferrari F8 Tributo</h5>
                       <p>Homenajea al motor V8 Ferrari más potente de la historia.</p>
