img historia para sm size

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -118,6 +118,9 @@
             su departamento de carreras.
           </p>
         </div>
+        <div class="d-block d-sm-none">
+          <img src="../images/enzolast01-644x362.jpg" alt="Enzo Ferrari foto antigua" class="img-fluid">
+        </div>
         <div
           class="container-fluid g-0 bgAmarillo"
         >
@@ -128,8 +131,8 @@
                 type="video/mp4"
               />
             </video>
-          </div>
         </div>
+      </div>
       </section>
       <section>
         <div
@@ -141,9 +144,12 @@
             le considera como el Ferrari más potente de la historia. En agosto
             de ese mismo año se develó el nuevo descapotable Portofino, equipado
             con un motor V8, que reemplazó al California como modelo básico de
-            la marca.8​ En septiembre de 2022 la fábrica presentó al público su
+            la marca.​ En septiembre de 2022 la fábrica presentó al público su
             primer vehículo deportivo utilitario, el Purosangue, a 12 cilindros.
           </p>
+        </div>
+        <div class="d-block d-sm-none">
+          <img src="../images/Ferrari Portofino.jpg" alt="Enzo Ferrari foto antigua" class="img-fluid">
         </div>
         <div
           class="container-fluid g-0 bgAmarillo"
