partial estilos - img responsive carousel modelos

--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
         >
           <h2>Motorización</h2>
         </div>
+        <div class="d-block d-sm-none">
+          <img src="images/motor sf90 stradale.jpg" alt="Enzo Ferrari foto antigua" class="img-fluid">
+        </div>
         <div
           class="container-fluid g-0 bgAmarillo"
         >
