--- a/pages/modelos.html
+++ b/pages/modelos.html
@@ -205,7 +205,7 @@
         <div
           class="container-fluid g-0 mx-auto p-3 text-center bgRojo"
         >
-        <p class="m-0">Buscanos en las redes</p>
+        <h5 class="m-0">Buscanos en las redes</h5>
         <div>
           <a href="#"
             ><i
