--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -163,7 +163,7 @@
     </main>
     <footer>
       <div class="container-fluid g-0 mx-auto p-3 text-center bgRojo">
-        <p class="m-0">Buscanos en las redes</p>
+        <h5 class="m-0">Buscanos en las redes</h5>
         <div>
           <a href="#"
             ><i class="bi bi-facebook px-3 tamañoIcono imageDarken textoAmarillo"></i
