Agrego animaciones a título

--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Club de fans de Ferrari con noticias e información para los amantes del Cavallino Rampante">
-    <meta name="keywords" content="FERRARI CAVALLINO RAMPANTE AUTOS DEPORTIVOS CLUB DE FANS NOTICIAS INFORMACIÓN">
+    <meta
+      name="description"
+      content="Club de fans de Ferrari con noticias e información para los amantes del Cavallino Rampante"
+    />
+    <meta
+      name="keywords"
+      content="FERRARI CAVALLINO RAMPANTE AUTOS DEPORTIVOS CLUB DE FANS NOTICIAS INFORMACIÓN"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="shortcut icon" href="images/iconoferrari.png" type="image/png" />
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/custom.css" />
     <title>Ferrari Fans Club</title>
   </head>
   <body>
     <header>
-      <div
-        class="container-fluid g-0 d-none d-sm-block bgAmarillo"
-      >
+      <div class="container-fluid g-0 d-none d-sm-block bgAmarillo">
         <div class="ratio ratio-16x9">
-            <video
+          <video
             playsinline="playsinline"
             autoplay="autoplay"
             muted="muted"
@@ -31,15 +39,9 @@
               type="video/mp4"
             />
           </video>
-          <div class="mask text-light text-center">
-            <h1
-              class="p-1 m-0 titulo2"
-            >
-              Ferrari Fans Club
-            </h1>
-            <p
-              class="p-1 m-0 titulo2"
-            >
+          <div class="mask text-light text-center animate__animated animate__backInLeft">
+            <h1 class="p-1 m-0 titulo2">Ferrari Fans Club</h1>
+            <p class="p-1 m-0 titulo2">
               Noticias e información para todos los amantes del cavallino
               rampante
             </p>
@@ -49,16 +51,12 @@
     </header>
     <header>
       <div class="container-fluid g-0 d-block d-sm-none">
-        <div
-          class="bg-image"
-        >
-          <div
-            class="headerPages__bg "
-          >
-            <div class="mask mask mascara1 margen1 d-flex justify-content-center align-items-center h-100">
-              <div
-                class="mb-0 p-2 cuadro1"
-              >
+        <div class="bg-image">
+          <div class="headerPages__bg">
+            <div
+              class="mask mask mascara1 margen1 d-flex justify-content-center align-items-center h-100"
+            >
+              <div class="mb-0 p-2 cuadro1 animate__animated animate__backInLeft">
                 <h2>Ferrari Fans Club</h2>
                 <p>
                   Noticias e información para todos los amantes del cavallino
@@ -70,9 +68,7 @@
         </div>
       </div>
     </header>
-    <nav
-      class="navbar navbar-expand-lg sticky-top py-0 bgRojo"
-    >
+    <nav class="navbar navbar-expand-lg sticky-top py-0 bgRojo">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"
           ><img
@@ -94,37 +90,27 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a
-                class="nav-link fw-bold textoAmarillo"
-                href="index.html"
+              <a class="nav-link fw-bold textoAmarillo" href="index.html"
                 >Inicio</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link textoAmarillo"
-                href="pages/historia.html"
+              <a class="nav-link textoAmarillo" href="pages/historia.html"
                 >Historia</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link textoAmarillo"
-                href="pages/modelos.html"
+              <a class="nav-link textoAmarillo" href="pages/modelos.html"
                 >Modelos destacados</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link textoAmarillo"
-                href="pages/galeria.html"
+              <a class="nav-link textoAmarillo" href="pages/galeria.html"
                 >Galería de imágenes</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link textoAmarillo"
-                href="pages/contacto.html"
+              <a class="nav-link textoAmarillo" href="pages/contacto.html"
                 >Contacto</a
               >
             </li>
@@ -133,9 +119,7 @@
       </div>
     </nav>
     <main>
-      <section
-        class="mx-auto p-3 text-center bgAmarillo"
-      >
+      <section class="mx-auto p-3 text-center bgAmarillo">
         <div class="container">
           <h2 class="px-4">Ferrari Sf90 Stradale</h2>
           <p class="lead">El nuevo supercoche de producción en serie</p>
@@ -231,9 +215,7 @@
             </button>
           </div>
         </div>
-        <div
-          class="container-fluid g-0 mx-auto p-3 text-center bgAmarillo"
-        >
+        <div class="container-fluid g-0 mx-auto p-3 text-center bgAmarillo">
           <p>
             El Ferrari SF90 Stradale es el primer automóvil superdeportivo
             híbrido eléctrico enchufable del fabricante italiano Ferrari,
@@ -251,11 +233,13 @@
           <h2>Motorización</h2>
         </div>
         <div class="d-block d-sm-none">
-          <img src="images/motor sf90 stradale.jpg" alt="Enzo Ferrari foto antigua" class="img-fluid">
+          <img
+            src="images/motor sf90 stradale.jpg"
+            alt="Enzo Ferrari foto antigua"
+            class="img-fluid"
+          />
         </div>
-        <div
-          class="container-fluid g-0 bgAmarillo"
-        >
+        <div class="container-fluid g-0 bgAmarillo">
           <div class="ratio ratio-16x9 d-none d-sm-block">
             <video
               controls
@@ -272,33 +256,27 @@
         <div
           class="container-fluid g-0 my-0 mx-auto p-1 text-center bgAmarillo"
         >
-        <p>
-          El SF90 Stradale es el primer Ferrari con arquitectura PHEV
-          (vehículo eléctrico híbrido enchufable) que ve su motor de
-          combustión interno integrado con tres motores eléctricos, dos de los
-          cuales son independientes y están ubicados en el eje delantero, con
-          el tercero en la parte trasera, entre el motor y la caja de cambios.
-        </p>
+          <p>
+            El SF90 Stradale es el primer Ferrari con arquitectura PHEV
+            (vehículo eléctrico híbrido enchufable) que ve su motor de
+            combustión interno integrado con tres motores eléctricos, dos de los
+            cuales son independientes y están ubicados en el eje delantero, con
+            el tercero en la parte trasera, entre el motor y la caja de cambios.
+          </p>
         </div>
       </section>
-      <div
-        class="container-fluid g-0 my-0 mx-auto p-1 text-center bgAmarillo"
-      >
+      <div class="container-fluid g-0 my-0 mx-auto p-1 text-center bgAmarillo">
         <ul style="list-style-type: none">
           <li>
             <a href="pages/contacto.html">
-              <button
-                class="btn btn-danger btn-lg mt-2 textoAmarillo"
-              >
+              <button class="btn btn-danger btn-lg mt-2 textoAmarillo">
                 Sumate al club de fans
               </button></a
             >
           </li>
           <li>
             <a href="https://www.ferrari.com/es-ES" target="_blank">
-              <button
-                class="btn btn-danger btn-lg mt-2 textoAmarillo"
-              >
+              <button class="btn btn-danger btn-lg mt-2 textoAmarillo">
                 Ir a la página oficial de Ferrari
               </button></a
             >
@@ -306,9 +284,7 @@
         </ul>
       </div>
       <footer>
-        <div
-          class="container-fluid g-0 mx-auto p-3 text-center bgRojo"
-        >
+        <div class="container-fluid g-0 mx-auto p-3 text-center bgRojo">
           <h5 class="m-0">Buscanos en las redes</h5>
           <div>
             <a href="#"
@@ -338,6 +314,6 @@
         </div>
       </footer>
     </main>
-    <script src="js/bootstrap.js"></script>    
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
