--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -20,7 +20,7 @@
         <div class="bg-image">
           <div class="headerPages__bg">
             <div class="mask mascara1 margen1 d-flex justify-content-center align-items-center h-100">
-              <div class="mb-0 p-2 cuadro1">
+              <div class="mb-0 p-2 cuadro1 animate__animated animate__backInLeft">
                 <h1>Ferrari Fans Club</h1>
                 <p>
                   Noticias e información para todos los amantes del cavallino
