cambio de animación a zoom in titulo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -29,7 +29,7 @@
             >
               <div class="mask mascara1 margen1 d-flex justify-content-center align-items-center h-100">
                 <div
-                  class="mb-0 p-2 cuadro1 animate__animated animate__backInLeft"
+                  class="mb-0 p-2 cuadro1 animate__animated animate__zoomIn"
                 >
                   <h1>Ferrari Fans Club</h1>
                   <p>
