--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               type="video/mp4"
             />
           </video>
-          <div class="mask text-light text-center animate__animated animate__backInLeft">
+          <div class="mask text-light text-center animate__animated animate__zoomIn">
             <h1 class="p-1 m-0 titulo2">Ferrari Fans Club</h1>
             <p class="p-1 m-0 titulo2">
               Noticias e información para todos los amantes del cavallino
