--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div
               class="mask mask mascara1 margen1 d-flex justify-content-center align-items-center h-100"
             >
-              <div class="mb-0 p-2 cuadro1 animate__animated animate__backInLeft">
+              <div class="mb-0 p-2 cuadro1 animate__animated animate__zoomIn">
                 <h2>Ferrari Fans Club</h2>
                 <p>
                   Noticias e información para todos los amantes del cavallino
