padding images sm size historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -122,7 +122,7 @@
             su departamento de carreras.
           </p>
         </div>
-        <div class="d-block d-sm-none">
+        <div class="d-block d-sm-none px-1 bgAmarillo">
           <img src="../images/enzolast01-644x362.jpg" alt="Enzo Ferrari foto antigua" class="img-fluid">
         </div>
         <div
@@ -152,8 +152,8 @@
             primer vehículo deportivo utilitario, el Purosangue, a 12 cilindros.
           </p>
         </div>
-        <div class="d-block d-sm-none">
-          <img src="../images/Ferrari Portofino.jpg" alt="Enzo Ferrari foto antigua" class="img-fluid">
+        <div class="d-block d-sm-none p-1 bgAmarillo">
+          <img src="../images/Ferrari Portofino.jpg" alt="Ferrari Portofino" class="img-fluid">
         </div>
         <div
           class="container-fluid g-0 bgAmarillo"
